[tool.poetry]
name = "cdshandler"
version = "0.1.0"
description = ""
authors = ["Cian Kelly <cianrkelly23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<4.0"
cdsapi = "^0.7.5"
numpy = "<2.0.0,>=1.23.0"
xarray = "^2024.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
